--- a/projects/2017-rainy-day-power-spectrum/002-flag-raw.yml
+++ b/projects/2017-rainy-day-power-spectrum/002-flag-raw.yml
@@ -1,16 +1,10 @@
 input: 000-raw-data
-output: 001-flagged-raw-data
-output-accumulated: 001-accumulated-raw-data
-output-flags: 001-raw-data-flags
+input-transposed: 001-raw-transposed-data
+output: 002-flagged-raw-data
+output-flags: 002-raw-data-flags
 metadata: metadata
-channel-flag-threshold: 0
-baseline-flag-threshold: 15
-integration-flag-threshold: 15
-special-baselines: # these baselines will be plotted
-    - 314 # erroneously flagged at integration 2000 (when using unwindowed median)
-    - 4228
-    - 19520 # problematic at integration 763
-    - 30741 # longest baseline
+channel-flag-threshold: 5
+integration-flag-threshold: 3
 a-priori-antenna-flags:
     - 1 # spikes
     - 10 # time-series of B is shitty
