--- a/projects/2017-rainy-day-power-spectrum/002-flag-calibrated.yml
+++ b/projects/2017-rainy-day-power-spectrum/002-flag-calibrated.yml
@@ -3,6 +3,6 @@ input-transposed: 001-calibrated-transposed-data
 output: 002-flagged-calibrated-data
 output-flags: 002-calibrated-data-flags
 metadata: metadata
-channel-flag-threshold: 0.2     # ratio of mean to RMS
-integration-flag-threshold: 0.3 # ratio of RMS to mean of absolute value (minus 1)
+visibility-amplitude-threshold: 5               # ratio of absolute value to RMS
+channel-baseline-constant-offset-threshold: 0.3 # ratio of absolute value of mean to RMS
 
