set integration rms threshold

--- a/projects/2017-rainy-day-power-spectrum/002-flag-calibrated.yml
+++ b/projects/2017-rainy-day-power-spectrum/002-flag-calibrated.yml
@@ -3,6 +3,7 @@ input-transposed: 001-calibrated-transposed-data
 output: 002-flagged-calibrated-data
 output-flags: 002-calibrated-data-flags
 metadata: metadata
+integration-rms-threshold: 3                    # ratio of RMS over baselines to MAD across time
 visibility-amplitude-threshold: 5               # ratio of absolute value to RMS
 channel-baseline-constant-offset-threshold: 0.3 # ratio of absolute value of mean to RMS
 flag-autocorrelations: true
