add metadata location to tikhonov regularization
this allows us to rotate into galactic coordinates after imaging

--- a/projects/2017-rainy-day-power-spectrum/032-tikhonov-even.yml
+++ b/projects/2017-rainy-day-power-spectrum/032-tikhonov-even.yml
@@ -1,6 +1,7 @@
 input: 031-m-modes-even
 output-alm: 032-dirty-alm-even
 output-map: 032-dirty-map-even
+metadata: metadata
 transfer-matrix: 100-transfer-matrix
 regularization: 100
 nside: 512
