--- a/projects/2017-rainy-day-power-spectrum/032-tikhonov-odd.yml
+++ b/projects/2017-rainy-day-power-spectrum/032-tikhonov-odd.yml
@@ -1,6 +1,7 @@
 input: 031-m-modes-odd
 output-alm: 032-dirty-alm-odd
 output-map: 032-dirty-map-odd
+metadata: metadata
 transfer-matrix: 100-transfer-matrix
 regularization: 100
 nside: 512
