--- a/projects/2017-rainy-day-power-spectrum/032-tikhonov-all.yml
+++ b/projects/2017-rainy-day-power-spectrum/032-tikhonov-all.yml
@@ -1,6 +1,7 @@
 input: 031-m-modes
 output-alm: 032-dirty-alm
 output-map: 032-dirty-map
+metadata: metadata
 transfer-matrix: 100-transfer-matrix
 regularization: 100
 nside: 512
