--- a/projects/2017-rainy-day-power-spectrum/032-tikhonov-channel-maps.yml
+++ b/projects/2017-rainy-day-power-spectrum/032-tikhonov-channel-maps.yml
@@ -2,6 +2,7 @@ input: 031-m-modes
 output-alm: 032-dirty-channel-alm
 output-map: 032-dirty-channel-map
 output-directory: 032-dirty-channel-maps
+metadata: metadata
 transfer-matrix: 100-transfer-matrix
 regularization: 100
 nside: 512
