compute m-modes from transposed visibilities
* flags are generally computed from these transposed visibilities, so we also need to know how to
  apply these flags on the fly

--- a/projects/2017-rainy-day-power-spectrum/031-tikhonov-odd.yml
+++ b/projects/2017-rainy-day-power-spectrum/031-tikhonov-odd.yml
@@ -1,6 +1,6 @@
-input: 031-m-modes-even
-output-alm: 032-dirty-alm-even
-output-map: 032-dirty-map-even
+input: 030-m-modes-odd
+output-alm: 031-dirty-alm-odd
+output-map: 031-dirty-map-odd
 metadata: metadata
 transfer-matrix: 100-transfer-matrix
 regularization: 100
