--- a/projects/2017-rainy-day-power-spectrum/031-tikhonov-even.yml
+++ b/projects/2017-rainy-day-power-spectrum/031-tikhonov-even.yml
@@ -1,6 +1,6 @@
-input: 031-m-modes-odd
-output-alm: 032-dirty-alm-odd
-output-map: 032-dirty-map-odd
+input: 030-m-modes-even
+output-alm: 031-dirty-alm-even
+output-map: 031-dirty-map-even
 metadata: metadata
 transfer-matrix: 100-transfer-matrix
 regularization: 100
