force the new diffuse sky model to be a power law
I choose the spectral index though

--- a/projects/2017-rainy-day-power-spectrum/Makefile
+++ b/projects/2017-rainy-day-power-spectrum/Makefile
@@ -34,6 +34,9 @@ dirty-maps: \
 .PHONY: transfer-matrix
 transfer-matrix: .pipeline/100-transfer-matrix
 
+.PHONY: predict
+predict: .pipeline/040-predicted-visibilities
+
 .PHONY: average
 average: \
 	.pipeline/101-averaged-m-modes-all \
