--- a/projects/2017-rainy-day-power-spectrum/040-predict-visibilities.yml
+++ b/projects/2017-rainy-day-power-spectrum/040-predict-visibilities.yml
@@ -1,7 +1,9 @@
-input: 031-dirty-channel-alm
+input: 031-dirty-alm
+output-alm: 040-predicted-alm
 output-mmodes: 040-predicted-m-modes
 output-visibilities: 040-predicted-visibilities
 metadata: metadata
 hierarchy: hierarchy
 transfer-matrix: 100-transfer-matrix
+spectral-index: -2.3
 
