--- a/projects/2017-rainy-day-power-spectrum/030-getmmodes-recalibrated-all.yml
+++ b/projects/2017-rainy-day-power-spectrum/030-getmmodes-recalibrated-all.yml
@@ -1,6 +1,6 @@
 # This file was auto-generated. Do not edit directly!
 input: 001-recalibrated-transposed-data
-input-flags: 002-recalibrated-data-flags
+input-flags: 002-peeled-data-flags
 output: 030-m-modes-recalibrated-all
 metadata: metadata
 hierarchy: hierarchy
