--- a/projects/2017-rainy-day-power-spectrum/Makefile
+++ b/projects/2017-rainy-day-power-spectrum/Makefile
@@ -196,34 +196,28 @@ endef
 ####################################################################################################
 # RECALIBRATION
 
-.pipeline/040-predicted-visibilities: \
-		$(LIB)/040-predict-visibilities.jl project.yml 040-predict-visibilities.yml \
-		.pipeline/031-dirty-map-all \
-		.pipeline/100-transfer-matrix
-	$(call launch-remote,1)
-
-.pipeline/041-recalibrate: \
-		$(LIB)/041-recalibrate.jl project.yml wsclean.yml 041-recalibrate.yml \
-		.pipeline/002-flagged-calibrated-data \
-		.pipeline/040-predicted-visibilities
-	$(call launch-remote,1)
-
-.pipeline/042-recalibrate-apply: \
-		$(LIB)/042-recalibrate-apply.jl project.yml 042-recalibrate-apply.yml \
-		.pipeline/020-peeled-data \
-		.pipeline/041-recalibrate
-	$(call launch-remote,1)
-
-.pipeline/001-recalibrated-transposed-data: \
-		$(LIB)/001-transpose.jl project.yml 001-transpose-recalibrated.yml \
-		.pipeline/042-recalibrate-apply
-	$(call launch-remote,1)
-
-.pipeline/031-dirty-channel-maps-recalibrated: \
-		$(LIB)/031-tikhonov.jl project.yml 031-tikhonov-channel-maps-recalibrated.yml \
-		.pipeline/030-m-modes-recalibrated \
-		.pipeline/100-transfer-matrix
-	$(call launch-remote,1)
+#.pipeline/041-recalibrate: \
+#		$(LIB)/041-recalibrate.jl project.yml wsclean.yml 041-recalibrate.yml \
+#		.pipeline/002-flagged-calibrated-data \
+#		.pipeline/040-predicted-visibilities
+#	$(call launch-remote,1)
+#
+#.pipeline/042-recalibrate-apply: \
+#		$(LIB)/042-recalibrate-apply.jl project.yml 042-recalibrate-apply.yml \
+#		.pipeline/020-peeled-data \
+#		.pipeline/041-recalibrate
+#	$(call launch-remote,1)
+#
+#.pipeline/001-recalibrated-transposed-data: \
+#		$(LIB)/001-transpose.jl project.yml 001-transpose-recalibrated.yml \
+#		.pipeline/042-recalibrate-apply
+#	$(call launch-remote,1)
+#
+#.pipeline/031-dirty-channel-maps-recalibrated: \
+#		$(LIB)/031-tikhonov.jl project.yml 031-tikhonov-channel-maps-recalibrated.yml \
+#		.pipeline/030-m-modes-recalibrated \
+#		.pipeline/100-transfer-matrix
+#	$(call launch-remote,1)
 
 ####################################################################################################
 # TRANSFER MATRIX AND NOISE COVARIANCE MATRIX
