hook up recalibration again

--- a/projects/2017-rainy-day-power-spectrum/101-average-channels-m-modes-peeled-all.yml
+++ b/projects/2017-rainy-day-power-spectrum/101-average-channels-m-modes-peeled-all.yml
@@ -1,5 +1,5 @@
 # This file was auto-generated. Do not edit directly!
-input: 030-m-modes-peeled-all
+input: 030-m-modes-interpolated-peeled-all
 output: 101-averaged-m-modes-peeled-all
 Navg: 10
 
