--- a/projects/2017-rainy-day-power-spectrum/002-flag-raw.yml
+++ b/projects/2017-rainy-day-power-spectrum/002-flag-raw.yml
@@ -28,6 +28,14 @@ a-priori-antenna-flags:
     - 86 # pulsed pickup (related to air conditioning)
     - 87 # pulsed pickup (related to air conditioning)
     - 88 # B off
+    - 89 # time series of the visibilities doesn't correspond to reality
+    - 90 # time series of the visibilities doesn't correspond to reality
+    - 91 # time series of the visibilities doesn't correspond to reality
+    - 92 # time series of the visibilities doesn't correspond to reality
+    - 93 # time series of the visibilities doesn't correspond to reality
+    - 94 # time series of the visibilities doesn't correspond to reality
+    - 95 # time series of the visibilities doesn't correspond to reality
+    - 96 # time series of the visibilities doesn't correspond to reality
     - 105 # A shitty, B off
     - 106 # weird spectrum
     - 108 # B weird
