--- a/projects/2017-rainy-day-power-spectrum/120-basis-covariance-matrices-spherical.yml
+++ b/projects/2017-rainy-day-power-spectrum/120-basis-covariance-matrices-spherical.yml
@@ -1,4 +1,4 @@
-input: 101-averaged-m-modes
+input: 101-averaged-m-modes-peeled-all
 output: 120-basis-covariance-matrices-spherical
 power-spectrum: spherical
 
