make the basis covariance matrices more configurable and easier to cache
It took a long time to cache the covariance matrices when they're spread across ~100 files. So now
they're all just stored in a single file (they're not very large anyway).

Additionally, I don't want to rerun every single power spectrum estimator every time I change the
details of one estimator in this file, so I've made things a little more configurable.

--- a/projects/2017-rainy-day-power-spectrum/120-basis-covariance-matrices-angular.yml
+++ b/projects/2017-rainy-day-power-spectrum/120-basis-covariance-matrices-angular.yml
@@ -1,4 +1,30 @@
 input: 101-averaged-m-modes-peeled-all
 output: 120-basis-covariance-matrices-angular
 power-spectrum: angular
+l:
+    - 0
+    - 30
+    - 60
+    - 90
+    - 120
+    - 150
+    - 180
+    - 210
+    - 240
+    - 270
+    - 300
+frequencies:
+    # we will end up integrating over the channel widths, so we need to make sure we need to cover
+    # the full range of frequencies adding a little bit for the channel bandwidth
+    - 71.832
+    - 72.096
+    - 72.360
+    - 72.624
+    - 72.888
+    - 73.152
+    - 73.416
+    - 73.680
+    - 73.944
+    - 74.208
+    - 74.472
 
