--- a/projects/2017-rainy-day-power-spectrum/120-basis-covariance-matrices-cylindrical.yml
+++ b/projects/2017-rainy-day-power-spectrum/120-basis-covariance-matrices-cylindrical.yml
@@ -1,4 +1,36 @@
 input: 101-averaged-m-modes-peeled-all
 output: 120-basis-covariance-matrices-cylindrical
 power-spectrum: cylindrical
+kpara:
+    - 0.05
+    - 0.0586895
+    - 0.0688892
+    - 0.0808614
+    - 0.0949144
+    - 0.11141
+    - 0.130771
+    - 0.153498
+    - 0.180175
+    - 0.211487
+    - 0.248242
+    - 0.291384
+    - 0.342023
+    - 0.401464
+    - 0.471234
+    - 0.55313
+    - 0.649259
+    - 0.762094
+    - 0.894538
+    - 1.05
+kperp:
+    - 0.0
+    - 0.00333333
+    - 0.00666667
+    - 0.01
+    - 0.0133333
+    - 0.0166667
+    - 0.02
+    - 0.0233333
+    - 0.0266667
+    - 0.03
 
